WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270821
[watchOS] Text input list view controller is not legible when presented over a transparent background
https://bugs.webkit.org/show_bug.cgi?id=270821
Summary
[watchOS] Text input list view controller is not legible when presented over ...
Wenson Hsieh
Reported
2024-03-11 15:35:34 PDT
rdar://118537615
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-03-11 15:41:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25745
EWS
Comment 2
2024-03-11 19:02:22 PDT
Committed
275947@main
(3218bc287cc3): <
https://commits.webkit.org/275947@main
> Reviewed commits have been landed. Closing PR #25745 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug