[watchOS] Text input list view controller is not legible when presented over a transparent background https://bugs.webkit.org/show_bug.cgi?id=270821 rdar://118537615

Reviewed by Abrar Rahman Protyasha and Tim Horton.

Explicitly set the input view controllers' views' background colors to be `+systemBackgroundColor`.
Currently, these views are transparent, which works well in practice (since they present over a
black background anyways), but for certain clients that use a transparent background, this can cause
system UI to show up from behind the input view controllers.

* Source/WebKit/Platform/spi/watchos/PepperUICoreSPI.h:

Drive-by fix: remove some dead code, now that `-listView` is no longer implemented by the base
class when presenting a single or multi-select menu. Instead, reloading the `-collectionView` is
sufficient.

* Source/WebKit/UIProcess/ios/forms/WKDatePickerViewController.mm:
(-[WKDatePickerViewController viewDidLoad]):
* Source/WebKit/UIProcess/ios/forms/WKNumberPadViewController.mm:
(-[WKNumberPadViewController viewDidLoad]):
* Source/WebKit/UIProcess/ios/forms/WKSelectMenuListViewController.mm:
(-[WKSelectMenuListViewController viewDidLoad]):
(-[WKSelectMenuListViewController didSelectListItemAtIndexPath:]):
(-[WKSelectMenuListViewController cellForListItem:]): Deleted.
* Source/WebKit/UIProcess/ios/forms/WKTextInputListViewController.mm:
(-[WKTextInputListViewController viewDidLoad]):
* Source/WebKit/UIProcess/ios/forms/WKTimePickerViewController.mm:
(-[WKTimePickerViewController viewDidLoad]):

Canonical link: https://commits.webkit.org/275947@main